refactor: use ThreadFactory builder pattern
Co-authored-by: Nicolas Pepin-Perreault <43373+npepinpe@users.noreply.github.com>